@@ -3,7 +3,19 @@
 ## Stars
 **TODO: Fill out this section!**
 ## Known bugs:
-None
+When running the program for the first time, a warning similar to the following would occur
+```
++ WARNING: An illegal reflective access operation has occurred
++ WARNING: Illegal reflective access by com.google.inject.internal.cglib.core.$ReflectUtils$1 (file:/usr/share/maven/lib/guice.jar) 
+	to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
++ WARNING: Please consider reporting this to the maintainers of com.google.inject.internal.cglib.core.$ReflectUtils$1
++ WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
++ WARNING: All illegal access operations will be denied in a future release
+```
+This is a known [bug](https://github.com/google/guice/issues/1133) for Maven to occur occasionally due to system dependencies.
+The error would appear twice in **mvn package** and when you run the program or conduct system tests.
+All subsequent runs of the program would execute normally as expected.
+
 ## Design details:
 ### REPL:
 Rrather than connecting the logic of the comands directly to the REPLRunner,
